--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,4 +31,5 @@ spring.jpa.hibernate.ddl-auto=none
 # Run your schema on startup (optional but recommended)
 spring.sql.init.mode=always
 spring.sql.init.platform=mysql
+server.port=${PORT:8080}
 
