--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,9 +20,9 @@
 
 
 # --- MySQL from env (Railway creates these) ---
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:timesheet_db}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:timesheet}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
 spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:password}
+spring.datasource.password=${MYSQLPASSWORD:sriram07}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # You\u2019re using DTO + native SQL, so no schema from Hibernate
