--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,17 +19,20 @@
 #server.port=${PORT:8080}
 
 
-# --- MySQL from env (Railway creates these) ---
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:timesheet}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:sriram07}
+# --- MySQL from Railway Environment ---
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# You\u2019re using DTO + native SQL, so no schema from Hibernate
+# JPA / Hibernate (You\u2019re using DTO + native SQL)
 spring.jpa.hibernate.ddl-auto=none
 
-# Run your schema on startup (optional but recommended)
+# Run SQL schema on startup (optional)
 spring.sql.init.mode=always
 spring.sql.init.platform=mysql
+
+# Railway provides PORT dynamically
 server.port=${PORT:8080}
+
 
