--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,19 +18,20 @@
 #spring.sql.init.platform=mysql
 #server.port=${PORT:8080}
 
-
-# --- MySQL from Railway environment ---
-spring.datasource.url=jdbc:mysql://${MYSQLHOST:localhost}:${MYSQLPORT:3306}/${MYSQLDATABASE:timesheet}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-spring.datasource.username=${MYSQLUSER:root}
-spring.datasource.password=${MYSQLPASSWORD:sriram07}
+# --- MySQL from Railway Environment ---
+spring.datasource.url=jdbc:mysql://${MYSQLHOST}:${MYSQLPORT}/${MYSQLDATABASE}?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
+spring.datasource.username=${MYSQLUSER}
+spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
-# JPA / Hibernate (you\u2019re using DTO + native SQL)
+# JPA / Hibernate (You\u2019re using DTO + native SQL)
 spring.jpa.hibernate.ddl-auto=none
 
-# Run schema/data SQL on startup (only if you have schema.sql or data.sql)
+# Run SQL schema on startup (optional)
 spring.sql.init.mode=always
 spring.sql.init.platform=mysql
 
-# Railway provides PORT env var in deployment
+# Railway provides PORT dynamically
 server.port=${PORT:8080}
+
+
