--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -27,8 +27,9 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # JPA / Hibernate (You\u2019re using DTO + native SQL)
 spring.jpa.hibernate.ddl-auto=none
 
-# Run SQL schema on startup (optional)
+# --- Schema initialization (schema.sql will run on startup) ---
 spring.sql.init.mode=always
+spring.sql.init.schema-locations=classpath:schema.sql
 spring.sql.init.platform=mysql
 
 # Railway provides PORT dynamically
